# swift_project_assistant

./: .env_example  README.md  pyproject.toml
packaging/: build_binary.sh  entry.py
src/: app.py  llm_runner.py  prompt_generator.py  swift_dependency_analysis.py
src/bclg_apps/: __init__.py  files_manager.py  llms.py  rag.py
src/swift_project_assistant/: __init__.py  analyzer.py  llm.py  mcp_server.py  parser.py  summary.py
tests/: test_analyzer.py  test_llm.py  test_parser.py  test_summary.py
