[tool.poetry]
name = "swift_project_assistant"
version = "0.1.0"
description = ""
authors = ["Bruno Guedes <bruno@bclgapps.com.au>"]
readme = "README.md"
packages = [{include = "swift_project_assistant", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
streamlit = "^1.35.0"
python-dotenv = "^1.0.1"
langchain = "^0.2.1"
langchain-community = "^0.2.1"
langchain-anthropic = "^0.1.13"
langchain-openai = "^0.1.7"
langchain-groq = "^0.1.4"
langchain-chroma = "^0.1.1"
unstructured = "^0.14.5"
markdown = "^3.6"
gpt4all = "^2.7.0"
chromadb = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
