[tool.poetry]
name = "swift_project_assistant"
version = "0.1.0"
description = ""
authors = ["Bruno Guedes <bruno@bclgapps.com.au>"]
readme = "README.md"
packages = [{include = "swift_project_assistant", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
streamlit = "^1.36.0"
python-dotenv = "^1.0.1"
langchain = "^0.2.5"
langchain-community = "^0.2.5"
langchain-anthropic = "^0.1.15"
langchain-openai = "^0.1.9"
langchain-groq = "^0.1.5"
langchain-chroma = "^0.1.1"
unstructured = "^0.14.8"
markdown = "^3.6"
gpt4all = "^2.7.0"
chromadb = "^0.5.3"
sentence-transformers = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
