[project]
name = "swift-project-assistant"
version = "0.2.0"
description = "Analyze, summarize, and chat about Swift projects — plus an MCP server that lets AI agents understand Swift code without reading whole files."
authors = [{ name = "Bruno Guedes", email = "bruno@bclgapps.com.au" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.14"
# Base dependencies are just what the MCP server (swift-project-mcp) needs at
# runtime, so `uv tool install` / `pipx install` stay lean. The Streamlit chat
# app's heavier stack lives in the `app` extra below.
dependencies = [
    "python-dotenv (>=1.0,<2.0)",
    "httpx (>=0.27,<1.0)",
    "mcp (>=1.27,<2.0)",
]

[project.optional-dependencies]
# The Streamlit chat app (src/app.py + src/bclg_apps): install with
# `pip install '.[app]'` or `poetry install --extras app`.
app = [
    "streamlit (>=1.58,<2.0)",
    "langchain-openai (>=1.3,<2.0)",
    "langchain-anthropic (>=1.4,<2.0)",
    "langchain-groq (>=1.1,<2.0)",
    "langchain-ollama (>=1.1,<2.0)",
    "langchain-chroma (>=1.1,<2.0)",
]
huggingface = ["langchain-huggingface (>=1.2,<2.0)"]

[project.scripts]
swift-project-mcp = "swift_project_assistant.mcp_server:main"

[tool.poetry]
packages = [{ include = "swift_project_assistant", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pyinstaller = "^6.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
